--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -1,3 +1,10 @@
 apply plugin: 'java'
 apply plugin: 'application'
 mainClassName = "studypkg.MyFirstProgram"
+
+repositories {
+    mavenCentral()
+}
+dependencies {
+    implementation 'org.testng:testng:7.3.0'
+}
