--- a/adressbook-web-tests/build.gradle
+++ b/adressbook-web-tests/build.gradle
@@ -7,3 +7,7 @@ dependencies {
     implementation 'org.testng:testng:7.3.0'
     implementation 'org.seleniumhq.selenium:selenium-java:4.0.0-alpha-7'
 }
+
+test {
+    useTestNG()
+}
